--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://example:PAsSw0rD@db/example"
+DATABASE_URL="mysql://example:PAsSw0rD@localhost/example"
 MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_USER=example
 MYSQL_PASSWORD=PAsSw0rD
